# project-rdlynx19

./: .gitignore  README.md
CoveragePathPlanning/: CMakeLists.txt  Makefile  coveragePP  coveragePP.cpp  plotCPP.py  splitCSV.py
CoveragePathPlanning/include/: coveragePP.h  point.h
CoveragePathPlanning/ros_files/: trace.cpp
CoveragePathPlanning/src/: coveragePP.cpp  main.cpp  splitCSV.py
CoveragePathPlanning/tests/: CMakeLists.txt
CoveragePathPlanning/tests/unit/: coveragePPTests.cpp  mainTests.cpp  testGenerateBackAndForthPath.cpp  testIntermediatePoints.cpp  testMain.cpp  testWriteCSV.cpp
GOA/: Makefile  ObjectiveFunction.hpp  README.md  cppClassTest.py  goa.cpp  plot.py
PSO/: Makefile  ObjectiveFunction.hpp  README.md  UAV1.csv  UAV2.csv  UAV3.csv  UAV4.csv  cppClassTest.py  dSeekSearchVisualizer.py  dSeekSearchVisualizer2.py  deepSeekPSO.cpp  deepSeekSearch.cpp  deepSeekVisualizer.py  gpt3DVisualizer.py  gptCsvSplitter.py  gptPSO.cpp  gptVisualizer.py  gridCoveragePercent.cpp  localCoordinateSearch.cpp  particle_animation.html  pso  pso.cpp  results.txt  rewardBasedObjectiveFunction.hpp  rewardCoverage.cpp  searchRadiusAvoidance.cpp
PSO-TSP/: CMakeLists.txt  Makefile  ObjectiveFunction.hpp  deepSeekPSO.cpp  deepSeekVisualizer.py  gptVisualizer.py  pso
PSO-TSP/include/: ObjectiveFunction.hpp  cityDefinition.hpp  particleDefinition.hpp  psoDefinition.hpp  utils.hpp
PSO-TSP/misc/: deepSeekPSO.cpp  pso.cpp
PSO-TSP/src/: cityImplementation.cpp  mainSim.cpp  particleImplementation.cpp  psoImplementation.cpp  utils.cpp
PSO-TSP/tests/: CMakeLists.txt
PSO-TSP/tests/unit/: testCity.cpp  testPSO.cpp
PSO-TSP/visualizer/: deepSeekVisualizer.py
cfVisualizer/: CMakeLists.txt  package.xml
cfVisualizer/src/: trace.cpp
crazyflie/: cmd_full_state.py  cppClassTest.py  cppTrajTest.py
visualizerPkg/src/cfVisualizer/src/: trace.cpp
